# quizbuilder

./: .env  .gitignore  Cargo.toml  README.md  justfile
backend/: Cargo.toml
backend/libquiz/: .env  Cargo.toml
backend/libquiz/doc/: database.dia
backend/libquiz/migrations/initial/: down.sql  up.sql
backend/libquiz/src/db/: mod.rs  quiz.rs  quiz_option.rs  quiz_score.rs  quiz_submission.rs
backend/libquiz/src/schema/: mod.rs  quiz.rs  quiz_option.rs  quiz_question.rs  quiz_score.rs  quiz_submission.rs  root.rs
backend/libquiz/src/types/: id.rs  time.rs
backend/quizapi/: .env  Cargo.toml
backend/quizapi/src/route/: graphql.rs
backend/quizd/: Cargo.toml  Rocket.toml
backend/quizd/src/routes/: gather_identity.rs  submit_quiz.rs  take_quiz.rs
backend/quizd/templates/: landing.tera  quiz.html.tera  quiz.tera
backend/quizd/wwwroot/: main.css
backend/quizmgmtd/: .env  Cargo.toml
backend/quizmgmtd/src/: error.rs  lib.rs
backend/quizmgmtd/src/routes/: index.rs  mod.rs  quiz_detail.rs  quizlist.rs  submission.rs
backend/quizmgmtd/static/: main.css
backend/quizmgmtd/templates/: header.html  index.html.tera  index.tera  quiz-detail.html.tera  quiz-detail.tera  quiz-questions.html.tera  quiz-questions.tera  quiz-submission.html.tera  quiz-submission.tera  quizlist.html.tera  quizlist.tera
backend/quizmgmtd/wwwroot/: main.css
doc/: database.dia  infrastructure.dia  infrastructure.md
frontend/: package-lock.json  package.json
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
frontend/src/app/@types/: option.ts  question.ts
frontend/src/app/components/option/: option.component.html  option.component.ts
frontend/src/app/components/question/: question.component.html  question.component.ts
frontend/src/app/services/: global-event.service.ts
libquiz/: Cargo.toml
libquiz/src/: lib.rs
libquiz/src/db/: config.rs  quiz.rs  quiz_option.rs  quiz_question.rs  quiz_submission.rs
libquiz/src/schema/: quiz.rs  quiz_answer.rs  quiz_option.rs  quiz_question.rs  quiz_submission.rs  root.rs
libquiz/src/types/: error.rs  mod.rs  time.rs
migrations/initial/: down.sql  up.sql
quizapi/: Cargo.toml
quizapi/src/: lib.rs
quizapi/src/route/: graphql.rs
quizbuilder/: README.md  package-lock.json  package.json
quizd/: .env  Cargo.toml
quizd/src/: config.rs  error.rs  handlebars_helpers.rs  lib.rs
quizd/src/route/: quiz.rs
quizd/src/routes/: gather_identity.rs  mod.rs  quiz.rs  submit_quiz.rs  take_quiz.rs
quizd/templates/: index.hbs  index.html.tera  landing.html.tera
src/lib/: handlers.rs  mod.rs  model.rs
src/lib/db/: init.rs  mod.rs  quiz.rs  quiz_answer.rs  quiz_option.rs  quiz_question.rs  quiz_submission.rs
src/lib/route/: graphql.rs  test.rs
src/lib/schema/: mod.rs  quiz.rs  quiz_answer.rs  quiz_question.rs  quiz_submission.rs  root.rs  schemas.rs
src/lib/test/: util.rs
src/lib/types/: id.rs  time.rs
