[package]
name = "quizbuilder"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libquiz"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
actix-web = "3.0.0-alpha.3"
actix-rt = "^1.1"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"] }
anyhow = "^1.0"
thiserror = "^1.0"
dotenv = "^0.15"
env_logger = "^0.7"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
juniper = "^0.14"