[package]
name = "libquiz"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "0.3", default-features = false, features = ["runtime-async-std", "macros", "postgres", "chrono", "uuid"] }
anyhow = "^1.0"
thiserror = "^1.0"
dotenv = "^0.15"
env_logger = "^0.7"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
rocket = "^0.4"
juniper = "^0.14"
juniper_rocket = "^0.5"
smol = "^0.1"
structopt = "0.3.15"
rand = "^0.7"
handlebars = "^3.2"