[package]
name = "quizd"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quizd"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
thiserror = "^1.0"
dotenv = "^0.15"
env_logger = "^0.7"
log = "^0.4"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
rocket = { version = "^0.4", default-features = false, features = ["private-cookies"] }
rocket_contrib = { version = "^0.4", default-features = false, features = ["uuid"] }
structopt = "0.3.15"
rand = "^0.7"
tera = "^1.3"
libquiz = { path = "../libquiz" }
reqwest = { version = "^0.10", features = ["blocking"] }